지원서 구매 내역 핫픽스
지원서 구매내역에서 조회를 userId로 조회해서 가져와서 personalId로 변경